<resources>
    <string name="app_name">CalculatorUI_ConstraintLayout</string>
    <string name="calculatorText">Calculator</string>
    <string name="Result">30</string>
    <string name="Values">65-48+13</string>
    <string name="c">C</string>
    <string name="mod">%</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="enter_numbers">Enter Numbers</string>
    <string name="division">/</string>
    <string name="more_button">more button</string>
    <string name="multiply">x</string>
</resources>